--- a/style.css
+++ b/style.css
@@ -14,4 +14,81 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: slick
 */
 
+body {
+    max-width:100%;
+    width:100%;
+}
+
+.wp-site-blocks {
+    display: grid;
+    grid-gap: 1em;
+    grid-template-areas: 
+        "header"
+        "nav"
+        "main"
+        "aside"
+        "footer";
+}
+
+.wp-site-blocks > aside {
+    background-color:#f39c12;
+    color:#FFFFFF;
+    font-weight:900;
+    padding:20px;
+    /*text-align:center;*/
+
+    grid-area: aside;
+}
+
+.wp-site-blocks > footer {
+    background-color:#1abc9c;
+    color:#FFFFFF;
+    font-weight:900;
+    padding:20px;
+    /*text-align:center;*/
+
+    grid-area: footer;
+}
+
+.wp-site-blocks > header {
+    background-color:#16a085;
+    color:#FFFFFF;
+    font-weight:900;
+    padding:20px;
+    /*text-align:center;*/
+
+    grid-area: header;
+}
+
+.wp-site-blocks > main {
+    background-color:#3498db;
+    color:#FFFFFF;
+    font-weight:900;
+    padding:20px;
+    /*text-align:center;*/
+
+    grid-area: main;
+}
+
+.wp-site-blocks > nav {
+    background-color:#2c3e50;
+    color:#FFFFFF;
+    font-weight:900;
+    padding:20px;
+    /*text-align:center;*/
+
+    grid-area: nav;
+}
+
+
+@media (min-width: 500px) {
+    .wp-site-blocks {
+        grid-template-columns: 5fr 3fr;
+        grid-template-areas:
+        "header header"
+        "nav nav"
+        "main aside"
+        "footer footer";
+    }
+}
 
