--- a/templates/index.html
+++ b/templates/index.html
@@ -1,42 +1,44 @@
 <!-- wp:template-part {"layout":{"inherit":true}, "slug":"header", "tagName":"header"} /-->
 
-<!-- wp:query {"className":"", "tagName":"main", "layout":{"inherit":true}, "queryId":0,"query":{"perPage":"10","pages":"100","offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","sticky":"","inherit":true}} -->
-<main class="wp-block-query">
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|l","bottom":"var:preset|spacing|l","left":"var:preset|spacing|l","right":"var:preset|spacing|l"},"margin":{"top":"var:preset|spacing|xl","bottom":"var:preset|spacing|xxl"},"blockGap":"var:preset|spacing|none"}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--xl);margin-bottom:var(--wp--preset--spacing--xxl);padding-top:var(--wp--preset--spacing--l);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--l);padding-left:var(--wp--preset--spacing--l)">
 
-    <!-- wp:spacer {"height":70} -->
-    <div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
+    <!-- wp:query {"queryId":15,"query":{"perPage":3,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false}} -->
+    <div class="wp-block-query">
 
+        <!-- wp:post-template -->
 
-    <!-- wp:post-template -->
+            <!-- wp:post-title {"isLink":true} /-->
 
-        <!-- wp:post-title {"isLink":true} /-->
+            <!-- wp:post-date /-->
 
-        <!-- wp:post-content {"layout":{"inherit":true}} /-->
+            <!-- wp:post-excerpt {"moreText":"Read more"} /-->
 
-        <!-- wp:spacer {"height":35} -->
-        <div style="height:35px" aria-hidden="true" class="wp-block-spacer"></div>
-        <!-- /wp:spacer -->
+        <!-- /wp:post-template -->
 
-    <!-- /wp:post-template -->
+        <!-- wp:query-pagination -->
 
+            <!-- wp:query-pagination-previous /-->
 
-    <!-- wp:query-pagination {"layout":{"inherit":true}} -->
+            <!-- wp:query-pagination-numbers /-->
 
-        <!-- wp:query-pagination-previous {"label":"Previous Page"} /-->
+            <!-- wp:query-pagination-next /-->
 
-        <!-- wp:query-pagination-numbers /-->
+        <!-- /wp:query-pagination -->
 
-        <!-- wp:query-pagination-next {"label":"Next Page"} /-->
+        <!-- wp:query-no-results -->
 
-    <!-- /wp:query-pagination -->
+            <!-- wp:paragraph {"placeholder":"Aggiungi testo o blocchi da visualizzare quando la query non restituisce alcun risultato."} -->
+            <p></p>
+            <!-- /wp:paragraph -->
 
-</main>
-<!-- /wp:query -->
+        <!-- /wp:query-no-results -->
 
-<!-- wp:spacer {"height":70} -->
-<div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
+    </div>
+    <!-- /wp:query -->
+
+</div>
+<!-- /wp:group -->
 
 <!-- wp:template-part {"layout":{"inherit":true}, "slug":"aside", "tagName":"aside"} /-->
 
