--- a/templates/single.html
+++ b/templates/single.html
@@ -1,116 +1,82 @@
 <!-- wp:template-part {"layout":{"inherit":true}, "slug":"header", "tagName":"header"} /-->
 
-<!-- wp:spacer {"height":70} -->
-<div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|xxl","bottom":"var:preset|spacing|xxl","left":"var:preset|spacing|l","right":"var:preset|spacing|l"},"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"blockGap":"var:preset|spacing|l"}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--xxl);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--xxl);padding-left:var(--wp--preset--spacing--l)">
 
-<!-- wp:group {"tagName":"main"} -->
-<main class="wp-block-group">
+    <!-- wp:columns {"style":{"spacing":{"blockGap":{"top":"var:preset|spacing|l"}}}} -->
+    <div class="wp-block-columns">
 
-    <!-- wp:group {"layout":{"inherit":true}, "tagName":"header"} -->
-    <header class="wp-block-group">
+        <!-- wp:column {"style":{"spacing":{"blockGap":"var:preset|spacing|l"}}} -->
+        <div class="wp-block-column">
 
-        <!-- wp:post-featured-image {"align":"full"} /-->
+            <!-- wp:post-featured-image {"align":"center"} /-->
 
-        <!-- wp:post-title {"isLink":true} /-->
+            <!-- wp:post-title /-->
 
-    </header>
-    <!-- /wp:group -->
+            <!-- wp:post-content /-->
 
-    <!-- wp:post-content {"layout":{"inherit":true}} /-->
-
-    <!-- wp:spacer {"height":70} -->
-    <div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-
-    <!-- wp:separator {"align":"center"} -->
-    <hr class="wp-block-separator aligncenter"/>
-    <!-- /wp:separator -->
-
-    <!-- wp:spacer {"height":35} -->
-    <div style="height:35px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
-
-    <!-- wp:group {"layout":{"inherit":true}, "tagName":"footer"} -->
-    <footer class="wp-block-group">
-
-        <!-- wp:columns {"layout":{"inherit":true}, "tagName":"div"} -->
-        <div class="wp-block-columns">
-
-            <!-- wp:column {"tagName":"div"} -->
-            <div class="wp-block-column">
-
-                <!-- wp:post-date {"isLink":true} /-->
-                <!-- wp:post-author {"showAvatar":false} /-->
-
-            </div>
-            <!-- /wp:column -->
-
-            <!-- wp:column {"tagName":"div"} -->
-            <div class="wp-block-column">
-
-                <!-- wp:post-terms {"term":"category", "textAlign":"right"} /-->
-                <!-- wp:post-terms {"term":"post_tag", "textAlign":"right"} /-->
-
-            </div>
-            <!-- /wp:column -->
+            <!-- wp:separator -->
+            <hr class="wp-block-separator has-alpha-channel-opacity"/>
+            <!-- /wp:separator -->
 
         </div>
-        <!-- /wp:columns -->
+        <!-- /wp:column -->
 
-    </footer>
-    <!-- /wp:group -->
+    </div>
+    <!-- /wp:columns -->
 
-    <!-- wp:spacer {"height":70} -->
-    <div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
+    <!-- wp:columns -->
+    <div class="wp-block-columns">
 
-    <!-- wp:group {"layout":{"inherit":true}, "tagName":"nav"} -->
-    <nav class="wp-block-group">
+        <!-- wp:column -->
+        <div class="wp-block-column">
 
-        <!-- wp:columns {"layout":{"inherit":true}, "tagName":"div"} -->
-        <div class="wp-block-columns">
+            <!-- wp:post-date /-->
 
-            <!-- wp:column {"tagName":"div"} -->
-            <div class="wp-block-column">
-
-                <!-- wp:post-navigation-link {"type":"previous"} /-->
-
-            </div>
-            <!-- /wp:column -->
-
-            <!-- wp:column {"tagName":"div"} -->
-            <div class="wp-block-column">
-
-                <!-- wp:post-navigation-link {"textAlign":"right"} /-->
-
-            </div>
-            <!-- /wp:column -->
+            <!-- wp:post-author-name /-->
 
         </div>
-        <!-- /wp:columns -->
+        <!-- /wp:column -->
 
-    </nav>
-    <!-- /wp:group -->
+        <!-- wp:column -->
+        <div class="wp-block-column">
 
-    <!-- wp:spacer {"height":70} -->
-    <div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
-    <!-- /wp:spacer -->
+            <!-- wp:post-terms {"term":"category","textAlign":"right"} /-->
 
-    <!-- wp:group {"layout":{"inherit":true}, "tagName":"footer"} -->
-    <footer class="wp-block-group">
+            <!-- wp:post-terms {"term":"post_tag","textAlign":"right"} /-->
 
-        <!-- wp:post-comments /-->
+        </div>
+        <!-- /wp:column -->
 
-    </footer>
-    <!-- /wp:group -->
+    </div>
+    <!-- /wp:columns -->
 
-</main>
+    <!-- wp:columns -->
+    <div class="wp-block-columns">
+
+        <!-- wp:column -->
+        <div class="wp-block-column">
+
+            <!-- wp:post-navigation-link {"type":"previous"} /-->
+
+        </div>
+        <!-- /wp:column -->
+
+        <!-- wp:column -->
+        <div class="wp-block-column">
+
+            <!-- wp:post-navigation-link {"textAlign":"right"} /-->
+
+        </div>
+        <!-- /wp:column -->
+
+    </div>
+    <!-- /wp:columns -->
+
+    <!-- wp:post-comments-form /-->
+
+</div>
 <!-- /wp:group -->
-
-<!-- wp:spacer {"height":70} -->
-<div style="height:70px" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
 
 <!-- wp:template-part {"layout":{"inherit":true}, "slug":"aside", "tagName":"aside"} /-->
 
