Add front-page.html template

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Slick
 Theme URI: https://www.slicktheme.it
 Author: Guglielmo Pepe
 Author URI: https://www.guglielmopepe.com
-Description: An experimental simple, lovable and complete starter theme
+Description: A simple, lovable and complete starter theme
 Tags: full-site-editing, blog, one-column
 Requires at least: 6.4
 Tested up to: 6.4
