--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                     <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|l","margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|xxl","bottom":"var:preset|spacing|xxl"}},"dimensions":{"minHeight":"100%"}},"layout":{"type":"flex","orientation":"vertical","verticalAlignment":"space-between"}} -->
                     <div class="wp-block-group" style="min-height:100%;margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--xxl);padding-right:0;padding-bottom:var(--wp--preset--spacing--xxl);padding-left:0">
 
-                        <!-- wp:query {"query":{"perPage":3,"pages":"5","offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false}} -->
+                        <!-- wp:query {"query":{"perPage":3,"pages":"5","offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true}} -->
                         <div class="wp-block-query">
 
                             <!-- wp:post-template {"style":{"spacing":{"blockGap":"var:preset|spacing|l"}}} -->
