Add other templates

--- a/templates/archive.html
+++ b/templates/archive.html
@@ -49,7 +49,7 @@
     </div>
     <!-- /wp:group -->
 
-    <!-- wp:pattern {"slug":"slick/query-loop-flags"} /-->
+    <!-- wp:pattern {"slug":"slick/query-loop-with-flags"} /-->
 
 </main>
 <!-- /wp:group -->
