--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,20 @@
 <!-- wp:template-part {"layout":{"inherit":true}, "slug":"header", "tagName":"header"} /-->
 
+<!-- wp:spacer {"height":"128px","style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}}}} -->
+<div style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);height:128px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
+
 <!-- wp:group {"tagName":"main", "style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"blockGap":"var:preset|spacing|l"}},"layout":{"type":"constrained"}} -->
 <main class="wp-block-group" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
 
-    <!-- wp:pattern {"slug":"slick/query-loop-with-flags"} /-->
+    <!-- wp:pattern {"slug":"slick/query-loop"} /-->
 
 </main>
 <!-- /wp:group -->
+
+<!-- wp:spacer {"height":"128px","style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}}}} -->
+<div style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);height:128px" aria-hidden="true" class="wp-block-spacer"></div>
+<!-- /wp:spacer -->
 
 <!-- wp:template-part {"layout":{"inherit":true}, "slug":"aside", "tagName":"aside"} /-->
 
