Add last commit for release 2.0.0

--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -1,20 +1,42 @@
 <!-- wp:template-part {"layout":{"inherit":true}, "slug":"header", "tagName":"header"} /-->
 
-<!-- wp:spacer {"height":"128px","style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}}}} -->
-<div style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);height:128px" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
+<!-- wp:group {"layout":{"type":"constrained"}} -->
+<div class="wp-block-group">
 
-<!-- wp:group {"tagName":"main", "style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"blockGap":"var:preset|spacing|l"}},"layout":{"type":"constrained"}} -->
-<main class="wp-block-group" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
+    <!-- wp:pattern {"slug":"slick/hero"} /-->
+
+    <!-- wp:spacer {"height":"var:preset|spacing|xxl"} -->
+    <div style="height:var(--wp--preset--spacing--xxl)" aria-hidden="true" class="wp-block-spacer"></div>
+    <!-- /wp:spacer -->
+
+    <!-- wp:pattern {"slug":"slick/benefits"} /-->
+
+    <!-- wp:spacer {"height":"var:preset|spacing|xxl"} -->
+    <div style="height:var(--wp--preset--spacing--xxl)" aria-hidden="true" class="wp-block-spacer"></div>
+    <!-- /wp:spacer -->
+
+    <!-- wp:pattern {"slug":"slick/call-to-action"} /-->
+
+    <!-- wp:spacer {"height":"var:preset|spacing|xxl"} -->
+    <div style="height:var(--wp--preset--spacing--xxl)" aria-hidden="true" class="wp-block-spacer"></div>
+    <!-- /wp:spacer -->
+
+    <!-- wp:pattern {"slug":"slick/testimonials"} /-->
+
+    <!-- wp:spacer {"height":"var:preset|spacing|xxl"} -->
+    <div style="height:var(--wp--preset--spacing--xxl)" aria-hidden="true" class="wp-block-spacer"></div>
+    <!-- /wp:spacer -->
+
+    <!-- wp:pattern {"slug":"slick/faqs"} /-->
+
+    <!-- wp:spacer {"height":"var:preset|spacing|xxl"} -->
+    <div style="height:var(--wp--preset--spacing--xxl)" aria-hidden="true" class="wp-block-spacer"></div>
+    <!-- /wp:spacer -->
 
     <!-- wp:pattern {"slug":"slick/query-loop"} /-->
-
-</main>
+    
+</div>
 <!-- /wp:group -->
-
-<!-- wp:spacer {"height":"128px","style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"}}}} -->
-<div style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);height:128px" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
 
 <!-- wp:template-part {"layout":{"inherit":true}, "slug":"aside", "tagName":"aside"} /-->
 
